# SynCatch

./: .gitignore  GUIDE.md  PHASE_1_SUMMARY.md  README.md  RELEASE_NOTES.md  RELEASE_TROUBLESHOOTING.md  SUPABASE_SETUP.md  eslint.config.js  hud.html  index.html  package-lock.json  package.json  quick-add.html  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
Inspiration/: Mission Roadmap _standalone_.html  extracted_3088fde2-0be8-4bae-a81a-1291b728a584.jsx  extracted_5d0d7a3f-f35d-419a-9986-c4be1ac7995d.jsx  extracted_bdafd6a6-6b8a-4065-bbe1-56f9b7b409b0.jsx  extracted_e1def941-1316-45f8-9938-09e8c51a1e4f.jsx  parsed_inspiration.html
docs/: android-release.md  developer-guide.md  index.html  installation.md  release-troubleshooting.md  releasing.md  supabase-setup.md
scripts/: build-android-release.sh  run-tauri.mjs  setup-android-signing.sh  setup-android.sh  test-android-emulator.sh
src/: hud.tsx  main.tsx  quick-add.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: bootstrap.tsx
src/components/: SynCatchLogo.tsx  SynCatchLogoAnimated.tsx  animated-loading.tsx
src/hooks/: use-mobile.ts
src/lib/: auth.ts  autostart.ts  cerebras.ts  database.ts  date.ts  supabase.ts  sync-engine.ts  sync-outbox.ts  tauri.ts
src/styles/: globals.css
supabase/migrations/: 001_init_schema.sql  002_add_missions.sql  003_task_model_redesign.sql  004_add_journal_tables.sql  005_add_notes_tables.sql  (+3 more)
(+72 files in other folders)
